; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_led.c_brcms_led_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_led.c_brcms_led_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_info = type { %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcms_led_unregister(%struct.brcms_info* %0) #0 {
  %2 = alloca %struct.brcms_info*, align 8
  store %struct.brcms_info* %0, %struct.brcms_info** %2, align 8
  %3 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %4 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %10 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %9, i32 0, i32 1
  %11 = call i32 @led_classdev_unregister(%struct.TYPE_4__* %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %14 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, -1
  br i1 %17, label %18, label %24

18:                                               ; preds = %12
  %19 = load %struct.brcms_info*, %struct.brcms_info** %2, align 8
  %20 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @gpio_free(i32 %22)
  br label %24

24:                                               ; preds = %18, %12
  ret void
}

declare dso_local i32 @led_classdev_unregister(%struct.TYPE_4__*) #1

declare dso_local i32 @gpio_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
